@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.rtn.dcgs.coalescence</groupId>
-	<artifactId>mission</artifactId>
+	<artifactId>coalescence</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
@@ -11,7 +11,7 @@
 		<maven.compiler.source>1.7</maven.compiler.source>
 		<maven.compiler.target>1.7</maven.compiler.target>
 		<maven-bundle-plugin-version>2.3.7</maven-bundle-plugin-version>
-
+		<version.errai>3.0.0.Final</version.errai>
 		<version.jackson>1.9.9-redhat-2</version.jackson>
 		<version.jackson.mapper.asl>1.9.9-redhat-2</version.jackson.mapper.asl>
 		<version.jboss.bom.eap>6.2.0-redhat-1</version.jboss.bom.eap>
@@ -36,22 +36,33 @@
 		<version.commons.lang3>3.3.2</version.commons.lang3>
 		<version.collection.commons>3.2.1</version.collection.commons>
 		<version.joda.time>2.3</version.joda.time>
-		<vaadin.version>7.2.3</vaadin.version>
-		<vaadin.plugin.version>${vaadin.version}</vaadin.plugin.version>
-		<vaadin.cdi.version>1.0.0.alpha2</vaadin.cdi.version>
 
-		<org.apache.tomcat.version>7.0.52</org.apache.tomcat.version>
 		<org.eclipse.jdt.core.compiler.version>3.7</org.eclipse.jdt.core.compiler.version>
 		<arquillian_core.version>1.1.3.Final</arquillian_core.version>
 		<arquillian.tomcat7.version>1.0.0.CR6</arquillian.tomcat7.version>
 		<arquillian.txn.api>1.0.1.Final</arquillian.txn.api>
 		<version.arquillian.rest.warp>1.0.0.Alpha3</version.arquillian.rest.warp>
+
+
+		<gwt.version>2.5.1</gwt.version>
+		<javaee.version>3.0.2.Final-redhat-4</javaee.version>
+		<errai.dev.context>${project.artifactId}</errai.dev.context>
+		<as.version>7.1.1.Final</as.version>
+		<!-- Add the absolute path for $JBOSS_HOME below to manage another instance -->
+		<errai.jboss.home>/Users/Josh/Development/EAP/Runtimes/jboss-eap-6.2.Coalescence</errai.jboss.home>
 	</properties>
 
 
 	<dependencyManagement>
 		<dependencies>
 			<!-- jboss -->
+			<dependency>
+				<groupId>org.jboss.spec</groupId>
+				<artifactId>jboss-javaee-6.0</artifactId>
+				<version>${javaee.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
 			<dependency>
 				<groupId>org.jboss.bom.eap</groupId>
 				<artifactId>jboss-javaee-6.0-with-tools</artifactId>
@@ -87,6 +98,30 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+
+			<!-- errai -->
+			<dependency>
+				<groupId>org.jboss.errai.bom</groupId>
+				<artifactId>errai-version-master</artifactId>
+				<version>${version.errai}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.errai</groupId>
+				<artifactId>errai-parent</artifactId>
+				<version>${version.errai}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+
+			<dependency>
+				<groupId>org.jboss.errai</groupId>
+				<artifactId>errai-cdi-jboss</artifactId>
+				<version>${version.errai}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>javax</groupId>
 				<artifactId>javaee-api</artifactId>
@@ -138,19 +173,10 @@
 		</dependencies>
 	</dependencyManagement>
 	<dependencies>
-		<!-- <dependency> <groupId>org.jboss.bom.eap</groupId> <artifactId>jboss-javaee-6.0-with-hibernate</artifactId> 
-			<version>${version.jboss.bom.eap}</version> <type>pom</type> </dependency> -->
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
 		</dependency>
-		<!-- arquillian -->
-		<!-- <dependency> <groupId>org.jboss.shrinkwrap.resolver</groupId> <artifactId>shrinkwrap-resolver-bom</artifactId> 
-			<type>pom</type> </dependency> -->
-		<!-- <dependency> <groupId>org.jboss.arquillian</groupId> <artifactId>arquillian-bom</artifactId> 
-			<version>${arquillian_core.version}</version> <type>pom</type> </dependency> -->
-		<!-- <dependency> <groupId>org.jboss.arquillian.extension</groupId> <artifactId>arquillian-rest-warp-bom</artifactId> 
-			<version>1.0.0.Alpha3</version> <type>pom</type> <scope>import</scope> </dependency> -->
 		<dependency>
 			<groupId>org.jboss.arquillian.extension</groupId>
 			<artifactId>arquillian-rest-client-impl-3x</artifactId>
@@ -162,6 +188,44 @@
 			<artifactId>arquillian-rest-client-api</artifactId>
 			<version>1.0.0.Alpha3</version>
 		</dependency>
+
+		<!-- errai -->
+		<dependency>
+			<groupId>com.google.gwt</groupId>
+			<artifactId>gwt-user</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.errai</groupId>
+			<artifactId>errai-javaee-all</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.errai</groupId>
+			<artifactId>errai-cordova</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.errai</groupId>
+			<artifactId>errai-cdi-jboss</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.spec</groupId>
+			<artifactId>jboss-javaee-6.0</artifactId>
+			<version>${javaee.version}</version>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
@@ -206,9 +270,9 @@
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jaxrs</artifactId>
-			<version>2.3.7.Final</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<!-- jackson -->
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -223,6 +287,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
@@ -238,10 +303,106 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.github.gwtbootstrap</groupId>
+			<artifactId>gwt-bootstrap</artifactId>
+			<version>2.3.2.0</version>
+			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+  <groupId>org.jsoup</groupId>
+  <artifactId>jsoup</artifactId>
+  <version>1.7.3</version>
+</dependency>
 	</dependencies>
 
 	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>gwt-maven-plugin</artifactId>
+										<versionRange>[2.4.0,)</versionRange>
+										<goals>
+											<goal>resources</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<skip />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[2.1,)</versionRange>
+										<goals>
+											<goal>unpack</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>gwt-maven-plugin</artifactId>
+				<version>${gwt.version}</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+		    <configuration>
+          <extraJvmArgs>-Xmx712m -XX:CompileThreshold=7000 -XX:MaxPermSize=512M -Derrai.jboss.home=${errai.jboss.home} -Derrai.dev.context=${errai.dev.context} -Derrai.jboss.javaopts="-XX:MaxPermSize=512m" -Derrai.jboss.javaagent.path=${settings.localRepository}/org/jboss/errai/errai-client-local-class-hider/${version.errai}/errai-client-local-class-hider-${version.errai}.jar</extraJvmArgs>
+          <logLevel>DEBUG</logLevel>
+          <localWorkers>2</localWorkers>
+          <noServer>false</noServer>
+          <server>org.jboss.errai.cdi.server.gwt.JBossLauncher</server>
+          <disableCastChecking>true</disableCastChecking>
+          <runTarget>${errai.dev.context}</runTarget>
+          <soyc>false</soyc>
+          <hostedWebapp>src/main/webapp</hostedWebapp>
+         <strict>true</strict>
+        </configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.4.1</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>${basedir}</directory>
+							<includes>
+								<include>src/main/webapp/app/</include>
+								<include>src/main/webapp/WEB-INF/deploy/</include>
+								<include>src/main/webapp/WEB-INF/lib/</include>
+								<include>**/gwt-unitCache/**</include>
+								<include>.errai/</include>
+							</includes>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -257,16 +418,207 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.jboss.as.plugins</groupId>
-				<artifactId>jboss-as-maven-plugin</artifactId>
-				<version>7.5.Final</version>
-			</plugin>
 		</plugins>
 	</build>
-
-
 	<profiles>
+		<profile>
+			<id>jboss7</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-war-plugin</artifactId>
+						<version>2.2</version>
+						<configuration>
+							<packagingExcludes>**/javax/**/*.*,**/client/local/**/*.class</packagingExcludes>
+							<outputFileNameMapping>@{artifactId}@-@{baseVersion}@@{dashClassifier?}@.@{extension}@</outputFileNameMapping>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.jboss.as.plugins</groupId>
+						<artifactId>jboss-as-maven-plugin</artifactId>
+						<version>7.5.Final</version>
+						<extensions>false</extensions>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-jboss-as-support</artifactId>
+				</dependency>
+
+				<dependency>
+					<groupId>com.google.guava</groupId>
+					<artifactId>guava-gwt</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>hsqldb</groupId>
+					<artifactId>hsqldb</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>javax.annotation</groupId>
+					<artifactId>jsr250-api</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>javax.enterprise</groupId>
+					<artifactId>cdi-api</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>javax.inject</groupId>
+					<artifactId>javax.inject</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>javax.validation</groupId>
+					<artifactId>validation-api</artifactId>
+					<classifier>sources</classifier>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>javax.validation</groupId>
+					<artifactId>validation-api</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate.common</groupId>
+					<artifactId>hibernate-commons-annotations</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate.javax.persistence</groupId>
+					<artifactId>hibernate-jpa-2.0-api</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-core</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-entitymanager</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-validator</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.hibernate</groupId>
+					<artifactId>hibernate-validator</artifactId>
+					<classifier>sources</classifier>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-cdi-jboss</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-codegen-gwt</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-data-binding</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-javax-enterprise</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-jaxrs-client</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-jpa-client</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-navigation</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-tools</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-ui</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.errai</groupId>
+					<artifactId>errai-html5</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.logging</groupId>
+					<artifactId>jboss-logging</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.resteasy</groupId>
+					<artifactId>jaxrs-api</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.spec.javax.interceptor</groupId>
+					<artifactId>jboss-interceptors-api_1.1_spec</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.spec.javax.transaction</groupId>
+					<artifactId>jboss-transaction-api_1.1_spec</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.weld.servlet</groupId>
+					<artifactId>weld-servlet-core</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.jboss.weld</groupId>
+					<artifactId>weld-core</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>xml-apis</groupId>
+					<artifactId>xml-apis</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>io.netty</groupId>
+					<artifactId>netty-codec-http</artifactId>
+					<scope>provided</scope>
+				</dependency>
+				<dependency>
+					<groupId>org.mortbay.jetty</groupId>
+					<artifactId>jetty-naming</artifactId>
+					<scope>provided</scope>
+				</dependency>
+			</dependencies>
+		</profile>
 		<profile>
 			<id>documentation</id>
 			<build>
